# OPTRefactor

./: README.md  pyproject.toml
opt_refactor/: __init__.py  classifier.py  cli.py  generator.py  parser.py  styles.py
tests/: test_classifier.py  test_generator.py  test_parser.py
tests/sample_data/: overpass_sample.kml
