[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opt-refactor"
version = "0.1.0"
description = "Transform unstyled Overpass Turbo KML exports into visually rich, color-coded KML files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
opt-refactor = "opt_refactor.cli:main"

[tool.setuptools.packages.find]
include = ["opt_refactor*"]
